Reference Implementation/Assignment3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     program -> function program
Rule 3     function -> TYPE NAME LPAREN RPAREN LBRACE fbody RBRACE
Rule 4     fbody -> allstatement
Rule 5     fbody -> allstatement fbody
Rule 6     allstatement -> statement
Rule 7     allstatement -> unmatchedstatement
Rule 8     statement -> assignment
Rule 9     statement -> declaration
Rule 10    statement -> whileblock
Rule 11    statement -> ifblock
Rule 12    unmatchedstatement -> IF LPAREN conditional RPAREN allstatement
Rule 13    unmatchedstatement -> IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
Rule 14    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
Rule 15    unmatchedstatement -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 16    ifblock -> IF LPAREN conditional RPAREN statement ELSE statement
Rule 17    ifblock -> IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
Rule 18    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
Rule 19    ifblock -> IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
Rule 20    ifblock -> IF LPAREN conditional RPAREN SEMICOLON
Rule 21    ifblock -> IF LPAREN conditional RPAREN LBRACE RBRACE
Rule 22    whileblock -> WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
Rule 23    whileblock -> WHILE LPAREN conditional RPAREN statement
Rule 24    conditional -> CS
Rule 25    conditional -> conditional LESSTHANEQ conditional
Rule 26    conditional -> conditional GREATERTHANEQ conditional
Rule 27    conditional -> conditional UNEQUAL conditional
Rule 28    conditional -> conditional EQUALCHECK conditional
Rule 29    conditional -> conditional LESSTHAN conditional
Rule 30    conditional -> conditional GREATERTHAN conditional
Rule 31    conditional -> conditional ANDOPERATOR conditional
Rule 32    CS -> expression
Rule 33    CS -> NOT LPAREN expression RPAREN
Rule 34    declaration -> TYPE dlist1 SEMICOLON
Rule 35    dlist1 -> NAME
Rule 36    dlist1 -> NAME COMMA dlist1
Rule 37    dlist1 -> specialvar
Rule 38    dlist1 -> specialvar COMMA dlist1
Rule 39    specialvar -> TIMES specialvar
Rule 40    specialvar -> TIMES NAME
Rule 41    assignment -> assignment_base SEMICOLON
Rule 42    assignment_base -> TIMES pointervar EQUALS expression
Rule 43    assignment_base -> NAME EQUALS expression
Rule 44    expression -> expression PLUS expression
Rule 45    expression -> expression MINUS expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> expression TIMES expression
Rule 48    expression -> MINUS expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> NUMBER
Rule 51    expression -> pointervar
Rule 52    pointervar -> TIMES pointervar
Rule 53    pointervar -> ANDOPERATOR pointervar
Rule 54    pointervar -> NAME

Terminals, with rules where they appear

ANDOPERATOR          : 31 53
COMMA                : 36 38
DIVIDE               : 46
ELSE                 : 13 14 16 17 18 19
EQUALCHECK           : 28
EQUALS               : 42 43
GREATERTHAN          : 30
GREATERTHANEQ        : 26
IF                   : 12 13 14 15 16 17 18 19 20 21
LBRACE               : 3 14 15 17 18 18 19 21 22
LESSTHAN             : 29
LESSTHANEQ           : 25
LPAREN               : 3 12 13 14 15 16 17 18 19 20 21 22 23 33 49
MINUS                : 45 48
NAME                 : 3 35 36 40 43 54
NOT                  : 33
NUMBER               : 50
PLUS                 : 44
RBRACE               : 3 14 15 17 18 18 19 21 22
RPAREN               : 3 12 13 14 15 16 17 18 19 20 21 22 23 33 49
SEMICOLON            : 20 34 41
TIMES                : 39 40 42 47 52
TYPE                 : 3 34
UNEQUAL              : 27
WHILE                : 22 23
error                : 

Nonterminals, with rules where they appear

CS                   : 24
allstatement         : 4 5 12
assignment           : 8
assignment_base      : 41
conditional          : 12 13 14 15 16 17 18 19 20 21 22 23 25 25 26 26 27 27 28 28 29 29 30 30 31 31
declaration          : 9
dlist1               : 34 36 38
expression           : 32 33 42 43 44 44 45 45 46 46 47 47 48 49
fbody                : 3 5 14 15 17 18 18 19 22
function             : 1 2
ifblock              : 11
pointervar           : 42 51 52 53
program              : 2 0
specialvar           : 37 38 39
statement            : 6 13 16 16 17 19 23
unmatchedstatement   : 7 13 14
whileblock           : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (2) program -> . function program
    (3) function -> . TYPE NAME LPAREN RPAREN LBRACE fbody RBRACE

    TYPE            shift and go to state 2

    function                       shift and go to state 1
    program                        shift and go to state 3

state 1

    (1) program -> function .
    (2) program -> function . program
    (1) program -> . function
    (2) program -> . function program
    (3) function -> . TYPE NAME LPAREN RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 1 (program -> function .)
    TYPE            shift and go to state 2

    function                       shift and go to state 1
    program                        shift and go to state 4

state 2

    (3) function -> TYPE . NAME LPAREN RPAREN LBRACE fbody RBRACE

    NAME            shift and go to state 5


state 3

    (0) S' -> program .



state 4

    (2) program -> function program .

    $end            reduce using rule 2 (program -> function program .)


state 5

    (3) function -> TYPE NAME . LPAREN RPAREN LBRACE fbody RBRACE

    LPAREN          shift and go to state 6


state 6

    (3) function -> TYPE NAME LPAREN . RPAREN LBRACE fbody RBRACE

    RPAREN          shift and go to state 7


state 7

    (3) function -> TYPE NAME LPAREN RPAREN . LBRACE fbody RBRACE

    LBRACE          shift and go to state 8


state 8

    (3) function -> TYPE NAME LPAREN RPAREN LBRACE . fbody RBRACE
    (4) fbody -> . allstatement
    (5) fbody -> . allstatement fbody
    (6) allstatement -> . statement
    (7) allstatement -> . unmatchedstatement
    (8) statement -> . assignment
    (9) statement -> . declaration
    (10) statement -> . whileblock
    (11) statement -> . ifblock
    (12) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (13) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (14) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (15) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (41) assignment -> . assignment_base SEMICOLON
    (34) declaration -> . TYPE dlist1 SEMICOLON
    (22) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (23) whileblock -> . WHILE LPAREN conditional RPAREN statement
    (16) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (17) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (18) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (19) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (20) ifblock -> . IF LPAREN conditional RPAREN SEMICOLON
    (21) ifblock -> . IF LPAREN conditional RPAREN LBRACE RBRACE
    (42) assignment_base -> . TIMES pointervar EQUALS expression
    (43) assignment_base -> . NAME EQUALS expression

    IF              shift and go to state 15
    TYPE            shift and go to state 16
    WHILE           shift and go to state 11
    TIMES           shift and go to state 10
    NAME            shift and go to state 13

    statement                      shift and go to state 9
    allstatement                   shift and go to state 19
    assignment                     shift and go to state 12
    fbody                          shift and go to state 14
    declaration                    shift and go to state 17
    whileblock                     shift and go to state 18
    unmatchedstatement             shift and go to state 20
    assignment_base                shift and go to state 21
    ifblock                        shift and go to state 22

state 9

    (6) allstatement -> statement .

    IF              reduce using rule 6 (allstatement -> statement .)
    TYPE            reduce using rule 6 (allstatement -> statement .)
    WHILE           reduce using rule 6 (allstatement -> statement .)
    TIMES           reduce using rule 6 (allstatement -> statement .)
    NAME            reduce using rule 6 (allstatement -> statement .)
    RBRACE          reduce using rule 6 (allstatement -> statement .)


state 10

    (42) assignment_base -> TIMES . pointervar EQUALS expression
    (52) pointervar -> . TIMES pointervar
    (53) pointervar -> . ANDOPERATOR pointervar
    (54) pointervar -> . NAME

    TIMES           shift and go to state 25
    ANDOPERATOR     shift and go to state 23
    NAME            shift and go to state 24

    pointervar                     shift and go to state 26

state 11

    (22) whileblock -> WHILE . LPAREN conditional RPAREN LBRACE fbody RBRACE
    (23) whileblock -> WHILE . LPAREN conditional RPAREN statement

    LPAREN          shift and go to state 27


state 12

    (8) statement -> assignment .

    ELSE            reduce using rule 8 (statement -> assignment .)
    IF              reduce using rule 8 (statement -> assignment .)
    TYPE            reduce using rule 8 (statement -> assignment .)
    WHILE           reduce using rule 8 (statement -> assignment .)
    TIMES           reduce using rule 8 (statement -> assignment .)
    NAME            reduce using rule 8 (statement -> assignment .)
    RBRACE          reduce using rule 8 (statement -> assignment .)


state 13

    (43) assignment_base -> NAME . EQUALS expression

    EQUALS          shift and go to state 28


state 14

    (3) function -> TYPE NAME LPAREN RPAREN LBRACE fbody . RBRACE

    RBRACE          shift and go to state 29


state 15

    (12) unmatchedstatement -> IF . LPAREN conditional RPAREN allstatement
    (13) unmatchedstatement -> IF . LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (14) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (15) unmatchedstatement -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE
    (16) ifblock -> IF . LPAREN conditional RPAREN statement ELSE statement
    (17) ifblock -> IF . LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (18) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (19) ifblock -> IF . LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (20) ifblock -> IF . LPAREN conditional RPAREN SEMICOLON
    (21) ifblock -> IF . LPAREN conditional RPAREN LBRACE RBRACE

    LPAREN          shift and go to state 30


state 16

    (34) declaration -> TYPE . dlist1 SEMICOLON
    (35) dlist1 -> . NAME
    (36) dlist1 -> . NAME COMMA dlist1
    (37) dlist1 -> . specialvar
    (38) dlist1 -> . specialvar COMMA dlist1
    (39) specialvar -> . TIMES specialvar
    (40) specialvar -> . TIMES NAME

    NAME            shift and go to state 34
    TIMES           shift and go to state 32

    dlist1                         shift and go to state 31
    specialvar                     shift and go to state 33

state 17

    (9) statement -> declaration .

    ELSE            reduce using rule 9 (statement -> declaration .)
    IF              reduce using rule 9 (statement -> declaration .)
    TYPE            reduce using rule 9 (statement -> declaration .)
    WHILE           reduce using rule 9 (statement -> declaration .)
    TIMES           reduce using rule 9 (statement -> declaration .)
    NAME            reduce using rule 9 (statement -> declaration .)
    RBRACE          reduce using rule 9 (statement -> declaration .)


state 18

    (10) statement -> whileblock .

    ELSE            reduce using rule 10 (statement -> whileblock .)
    IF              reduce using rule 10 (statement -> whileblock .)
    TYPE            reduce using rule 10 (statement -> whileblock .)
    WHILE           reduce using rule 10 (statement -> whileblock .)
    TIMES           reduce using rule 10 (statement -> whileblock .)
    NAME            reduce using rule 10 (statement -> whileblock .)
    RBRACE          reduce using rule 10 (statement -> whileblock .)


state 19

    (4) fbody -> allstatement .
    (5) fbody -> allstatement . fbody
    (4) fbody -> . allstatement
    (5) fbody -> . allstatement fbody
    (6) allstatement -> . statement
    (7) allstatement -> . unmatchedstatement
    (8) statement -> . assignment
    (9) statement -> . declaration
    (10) statement -> . whileblock
    (11) statement -> . ifblock
    (12) unmatchedstatement -> . IF LPAREN conditional RPAREN allstatement
    (13) unmatchedstatement -> . IF LPAREN conditional RPAREN statement ELSE unmatchedstatement
    (14) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE unmatchedstatement
    (15) unmatchedstatement -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE
    (41) assignment -> . assignment_base SEMICOLON
    (34) declaration -> . TYPE dlist1 SEMICOLON
    (22) whileblock -> . WHILE LPAREN conditional RPAREN LBRACE fbody RBRACE
    (23) whileblock -> . WHILE LPAREN conditional RPAREN statement
    (16) ifblock -> . IF LPAREN conditional RPAREN statement ELSE statement
    (17) ifblock -> . IF LPAREN conditional RPAREN statement ELSE LBRACE fbody RBRACE
    (18) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE LBRACE fbody RBRACE
    (19) ifblock -> . IF LPAREN conditional RPAREN LBRACE fbody RBRACE ELSE statement
    (20) ifblock -> . IF LPAREN conditional RPAREN SEMICOLON
    (21) ifblock -> . IF LPAREN conditional RPAREN LBRACE RBRACE
    (42) assignment_base -> . TIMES pointervar EQUALS expression
    (43) assignment_base -> . NAME EQUALS expression

    RBRACE          reduce using rule 4 (fbody -> allstatement .)
    IF              shift and go to state 15
    TYPE            shift and go to state 16
    WHILE           shift and go to state 11
    TIMES           shift and go to state 10
    NAME            shift and go to state 13

    statement                      shift and go to state 9
    allstatement                   shift and go to state 19
    assignment                     shift and go to state 12
    fbody                          shift and go to state 35
    declaration                    shift and go to state 17
    whileblock                     shift and go to state 18
    unmatchedstatement             shift and go to state 20
    assignment_base                shift and go to state 21
    ifblock                        shift and go to state 22

state 20

    (7) allstatement -> unmatchedstatement .

    IF              reduce using rule 7 (allstatement -> unmatchedstatement .)
    TYPE            reduce using rule 7 (allstatement -> unmatchedstatement .)
    WHILE           reduce using rule 7 (allstatement -> unmatchedstatement .)
    TIMES           reduce using rule 7 (allstatement -> unmatchedstatement .)
    NAME            reduce using rule 7 (allstatement -> unmatchedstatement .)
    RBRACE          reduce using rule 7 (allstatement -> unmatchedstatement .)


state 21

    (41) assignment -> assignment_base . SEMICOLON

    SEMICOLON       shift and go to state 36


state 22

    (11) statement -> ifblock .

    ELSE            reduce using rule 11 (statement -> ifblock .)
    IF              reduce using rule 11 (statement -> ifblock .)
    TYPE            reduce using rule 11 (statement -> ifblock .)
    WHILE           reduce using rule 11 (statement -> ifblock .)
    TIMES           reduce using rule 11 (statement -> ifblock .)
    NAME            reduce using rule 11 (statement -> ifblock .)
    RBRACE          reduce using rule 11 (statement -> ifblock .)


state 23

    (53) pointervar -> ANDOPERATOR . pointervar
    (52) pointervar -> . TIMES pointervar
    (53) pointervar -> . ANDOPERATOR pointervar
    (54) pointervar -> . NAME

    TIMES           shift and go to state 25
    ANDOPERATOR     shift and go to state 23
    NAME            shift and go to state 24

    pointervar                     shift and go to state 37

state 24

    (54) pointervar -> NAME .

    RPAREN          reduce using rule 54 (pointervar -> NAME .)
    PLUS            reduce using rule 54 (pointervar -> NAME .)
    MINUS           reduce using rule 54 (pointervar -> NAME .)
    DIVIDE          reduce using rule 54 (pointervar -> NAME .)
    TIMES           reduce using rule 54 (pointervar -> NAME .)
    EQUALS          reduce using rule 54 (pointervar -> NAME .)
    LESSTHANEQ      reduce using rule 54 (pointervar -> NAME .)
    GREATERTHANEQ   reduce using rule 54 (pointervar -> NAME .)
    UNEQUAL         reduce using rule 54 (pointervar -> NAME .)
    EQUALCHECK      reduce using rule 54 (pointervar -> NAME .)
    LESSTHAN        reduce using rule 54 (pointervar -> NAME .)
    GREATERTHAN     reduce using rule 54 (pointervar -> NAME .)
    ANDOPERATOR     reduce using rule 54 (pointervar -> NAME .)
    SEMICOLON       reduce using rule 54 (pointervar -> NAME .)


state 25

    (52) pointervar -> TIMES . pointervar
    (52) pointervar -> . TIMES pointervar
    (53) pointervar -> . ANDOPERATOR pointervar
    (54) pointervar -> . NAME

    TIMES           shift and go to state 25
    ANDOPERATOR     shift and go to state 23
    NAME            shift and go to state 24
